# algo-taller-tries

./: CMakeLists.txt
base/: .DiccString.hpp.swp  DiccString.hpp  a.out  tests.cpp
